--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Microverse</title>
 </head>
 <body>
-    <h1> Hello Microverse! </h1>
+    <h1 class="page-header"> Hello Microverse! </h1>
 </body>
 </html>
