--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Microverse</title>
+    <title>Document</title>
 </head>
-<body>
-    <h1 class="page-header"> Hello Microverse! </h1>
-</body>
+    <body>
+        <h1 class="page-header"> Hello Microverse! </h1>
+    </body>
 </html>
